--- a/como-surgiu-o-mascote-do-android/index.html
+++ b/como-surgiu-o-mascote-do-android/index.html
@@ -94,7 +94,8 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                    allowfullscreen>
+                </iframe>
             </div>
 
             <aside>
