--- a/portifolio-2/index.html
+++ b/portifolio-2/index.html
@@ -12,25 +12,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Portfólio | Marcio Felix</title>
 </head>
 
 <body>
-    <header>
+    <svg id="svg-topo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#1F2326" fill-opacity="1" d="M0,96L17.1,96C34.3,96,69,96,103,101.3C137.1,107,171,117,206,128C240,139,274,149,309,176C342.9,203,377,245,411,234.7C445.7,224,480,160,514,160C548.6,160,583,224,617,224C651.4,224,686,160,720,160C754.3,160,789,224,823,256C857.1,288,891,288,926,282.7C960,277,994,267,1029,250.7C1062.9,235,1097,213,1131,218.7C1165.7,224,1200,256,1234,240C1268.6,224,1303,160,1337,122.7C1371.4,85,1406,75,1423,69.3L1440,64L1440,0L1422.9,0C1405.7,0,1371,0,1337,0C1302.9,0,1269,0,1234,0C1200,0,1166,0,1131,0C1097.1,0,1063,0,1029,0C994.3,0,960,0,926,0C891.4,0,857,0,823,0C788.6,0,754,0,720,0C685.7,0,651,0,617,0C582.9,0,549,0,514,0C480,0,446,0,411,0C377.1,0,343,0,309,0C274.3,0,240,0,206,0C171.4,0,137,0,103,0C68.6,0,34,0,17,0L0,0Z"></path>
+    </svg>
+    <header id="header">
+        <nav class="container" dir="nav">
+            <div class="menu-main">
+                Portfólio
+            </div>
+            <div id="perfil">                
+                <div id="contDiv">
 
+                </div>
+                <span>
+                    "By FelixBR"
+                    <ul class="manu-hover" id="menu-perfil">
+                        <li>Início</li>
+                        <li>Sobre</li>
+                        <li>Contato</li>
+                        <li>Projetos</li>
+                    </ul>
+                </span>
+            </div>
+        </nav>
     </header>
     <!-- ######################### HOME ######################### -->
-    <section>
-
-    </section>
-
-    <!-- ######################### SKILLS ######################### -->
-    <section>
-
-    </section>
+    <main>
+        <section>
+            Meus Projetos
+        </section>
+        <!-- ######################### SKILLS ######################### -->
+        <section>
+        </section>
+    </main>
 <!-- ######################### FOOTER ######################### -->
     <footer>
-        
+
     </footer>
 
 
