--- a/portifolio-2/index.html
+++ b/portifolio-2/index.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/portifolio-2/css/main.css">
     <title>Portfólio | Marcio Felix</title>
 </head>
 
@@ -31,7 +31,7 @@
                 </div>
                 <span>
                     "By FelixBR"
-                    <ul class="manu-hover" id="menu-perfil">
+                    <ul class="menu-hover" id="menu-perfil">
                         <li>Início</li>
                         <li>Sobre</li>
                         <li>Contato</li>
