--- a/portifolio-2/index.html
+++ b/portifolio-2/index.html
@@ -21,36 +21,40 @@
         <path fill="#1F2326" fill-opacity="1" d="M0,96L17.1,96C34.3,96,69,96,103,101.3C137.1,107,171,117,206,128C240,139,274,149,309,176C342.9,203,377,245,411,234.7C445.7,224,480,160,514,160C548.6,160,583,224,617,224C651.4,224,686,160,720,160C754.3,160,789,224,823,256C857.1,288,891,288,926,282.7C960,277,994,267,1029,250.7C1062.9,235,1097,213,1131,218.7C1165.7,224,1200,256,1234,240C1268.6,224,1303,160,1337,122.7C1371.4,85,1406,75,1423,69.3L1440,64L1440,0L1422.9,0C1405.7,0,1371,0,1337,0C1302.9,0,1269,0,1234,0C1200,0,1166,0,1131,0C1097.1,0,1063,0,1029,0C994.3,0,960,0,926,0C891.4,0,857,0,823,0C788.6,0,754,0,720,0C685.7,0,651,0,617,0C582.9,0,549,0,514,0C480,0,446,0,411,0C377.1,0,343,0,309,0C274.3,0,240,0,206,0C171.4,0,137,0,103,0C68.6,0,34,0,17,0L0,0Z"></path>
     </svg>
     <header id="header">
-        <nav class="container" dir="nav">
+        <nav class="container" id="nav">
             <div class="menu-main">
-                Portfólio
+                <a class="logo" href="/">Portfólio<i class="fa-solid fa-mug-hot"></i></a>                
             </div>
             <div id="perfil">                
                 <div id="contDiv">
-
+                    <a href="/"><img src="img/logo.png" alt="Foto do perfil"></a>
                 </div>
-                <span>
-                    "By FelixBR"
+                <span>@FelixBR
+                    <i class="fa-solid fa-sort-down"></i>
                     <ul class="menu-hover" id="menu-perfil">
-                        <li>Início</li>
-                        <li>Sobre</li>
-                        <li>Contato</li>
-                        <li>Projetos</li>
+                        <i class="fa-solid fa-caret-up menuIconUp"></i>    
+                        <li><a href="#home">Início</a></li>
+                        <li><a href="#about">Sobre</a></li>
+                        <li><a href="#skills">Habilidades</a></li>
+                        <li><a href="#contact">Contato</a></li>
+                        <li><a href="#contact">Projetos</a></li>
                     </ul>
                 </span>
             </div>
         </nav>
-    </header>
-    <!-- ######################### HOME ######################### -->
+    </header>    
     <main>
-        <section>
-            Meus Projetos
+        <!-- ######################### HOME ######################### -->
+        <section id="home">
+            <div class="aayushi">
+                <p>Eu sou um <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+            </div>
         </section>
         <!-- ######################### SKILLS ######################### -->
         <section>
         </section>
     </main>
-<!-- ######################### FOOTER ######################### -->
+        <!-- ######################### FOOTER ######################### -->
     <footer>
 
     </footer>
