--- a/sidebar-menu-2/index.html
+++ b/sidebar-menu-2/index.html
@@ -11,11 +11,46 @@
     <div class="navigation">
       <div class="userBx">
         <div class="imgBx">
-          <img src="sidebar-menu-2/img/logo.png" alt="Logo">
+          <img src="../sidebar-menu-2/img/logo.png" alt="Logo" />
         </div>
+        <p class="username">FelixBR</p>
       </div>
       <div class="menuToggle"></div>
-      <p></p>
+      <ul class="menu">
+        <li>
+          <a href="#"> <ion-icon name="home-outline"></ion-icon>Início</a>
+        </li>
+        <li>
+          <a href="#"><ion-icon name="person-outline"></ion-icon>Sobre</a>
+        </li>
+        <li>
+          <a href="#"
+            ><ion-icon name="library-outline"></ion-icon>Habilidades</a
+          >
+        </li>
+        <li>
+          <a href="#"><ion-icon name="people-outline"></ion-icon>Contatos</a>
+        </li>
+        <li>
+          <a href="#"><ion-icon name="newspaper-outline"></ion-icon>Projetos</a>
+        </li>
+      </ul>
     </div>
+    <script>
+      let menuToggle = document.querySelector(".menuToggle");
+      let navigation = document.querySelector(".navigation");
+      menuToggle.onclick = function () {
+        navigation.classList.toggle("active");
+      };
+    </script>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
