--- a/portifolio-2/index.html
+++ b/portifolio-2/index.html
@@ -7,53 +7,145 @@
 -->
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/portifolio-2/css/main.css">
-    <title>Portfólio | Marcio Felix</title>
+    <link rel="stylesheet" href="/css/home-light.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/anima.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>   
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+    <title>Portfolio | Marcio Eduardo Felix </title>    
 </head>
-
 <body>
     <svg id="svg-topo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#1F2326" fill-opacity="1" d="M0,96L17.1,96C34.3,96,69,96,103,101.3C137.1,107,171,117,206,128C240,139,274,149,309,176C342.9,203,377,245,411,234.7C445.7,224,480,160,514,160C548.6,160,583,224,617,224C651.4,224,686,160,720,160C754.3,160,789,224,823,256C857.1,288,891,288,926,282.7C960,277,994,267,1029,250.7C1062.9,235,1097,213,1131,218.7C1165.7,224,1200,256,1234,240C1268.6,224,1303,160,1337,122.7C1371.4,85,1406,75,1423,69.3L1440,64L1440,0L1422.9,0C1405.7,0,1371,0,1337,0C1302.9,0,1269,0,1234,0C1200,0,1166,0,1131,0C1097.1,0,1063,0,1029,0C994.3,0,960,0,926,0C891.4,0,857,0,823,0C788.6,0,754,0,720,0C685.7,0,651,0,617,0C582.9,0,549,0,514,0C480,0,446,0,411,0C377.1,0,343,0,309,0C274.3,0,240,0,206,0C171.4,0,137,0,103,0C68.6,0,34,0,17,0L0,0Z"></path>
     </svg>
-    <header id="navigation">
-        <nav class="container" id="nav">
+    <header id='header'>
+        <nav class="container" id='nav'>
             <div class="menu-main">
-                <a class="logo" href="/">Portfolio <i class="fa-solid fa-mug-hot"></i>
-                </a>
+                <a class="logo" href="#">Portfolio <i class="fa-solid fa-mug-hot"></i></a>
             </div>
             <div id="perfil">
                 <div id="contDiv">
-                    <a href="/">
-                        <img src="/portifolio-2/img/logo.png" alt="foto de perfil do joão">
-                    </a>
+                    <a href="#"><img src="/img/logo.png" alt="avatar"></a>
                 </div>
-                <span>FelixBR
-                    <i class="fa-solid fa-sort-down"></i>
+                <span>FelixBR<i class="fa-solid fa-sort-down"></i>
                     <ul class="menu-hover" id="menu-perfil">
                     <i class="fa-solid fa-caret-up menuIconUp"></i>
-                    <li><a href="#home">Início</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#skills">Habilidades</a></li>
-                    <li><a href="#contact">Contato</a></li>
-                    <li><a href="/Projetos">Projetos</a></li>
+                    <li><ion-icon name="home-outline"></ion-icon><a href="#home">Início</a></li>
+                    <li><ion-icon name="person-outline"></ion-icon><a href="#about">Sobre</a></li>
+                    <li><ion-icon name="library-outline"></ion-icon><a href="#skills">Habilidades</a></li>
+                    <li><ion-icon name="people-outline"></ion-icon><a href="#contact">Contato</a></li>
+                     <li><ion-icon name="newspaper-outline"></ion-icon><a href="/Projetos">Projetos</a></li>
                     </ul>
                 </span>                
             </div>
         </nav>    
     </header>
-        <!-- ######################### FOOTER ######################### -->
-    <footer>
+    <main>  
+<!-- ######################### HOME ######################### -->         
+        <section id="home">
+            <div class="contImg">
+                <img id="pulse-img" src="/img/logo.png" alt="Imagem do João">
+            </div>
+            <div class="textHome">
+                <p><span class="color_purple">print</span>("<span class="color_green">Hello World, Meu nome é Marcio Felix <i class="fa-solid fa-mug-hot"></i></a></span>")</p>
+                <h1>Front-end D E S I G N E R</h1>
+                &mdash; 
+                <i class="fab fa-html5 color_orange"></i>
+                &mdash; 
+                <i class="fab fa-css3-alt color_blue"></i>
+                &mdash; 
+                <i class="fab fa-js-square color_yellow"></i>
+                &mdash; 
+                <i class="fab fa-node-js color_green"></i>
+                &mdash; 
+            </div>
+            <a href="/Projetos" class="btn-link">Meus Projetos</a>
+        </section> 
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="position: relative;top: 1rem;"><path fill="#1F2326" fill-opacity="1" d="M0,96L17.1,96C34.3,96,69,96,103,101.3C137.1,107,171,117,206,128C240,139,274,149,309,176C342.9,203,377,245,411,234.7C445.7,224,480,160,514,160C548.6,160,583,224,617,224C651.4,224,686,160,720,160C754.3,160,789,224,823,256C857.1,288,891,288,926,282.7C960,277,994,267,1029,250.7C1062.9,235,1097,213,1131,218.7C1165.7,224,1200,256,1234,240C1268.6,224,1303,160,1337,122.7C1371.4,85,1406,75,1423,69.3L1440,64L1440,320L1422.9,320C1405.7,320,1371,320,1337,320C1302.9,320,1269,320,1234,320C1200,320,1166,320,1131,320C1097.1,320,1063,320,1029,320C994.3,320,960,320,926,320C891.4,320,857,320,823,320C788.6,320,754,320,720,320C685.7,320,651,320,617,320C582.9,320,549,320,514,320C480,320,446,320,411,320C377.1,320,343,320,309,320C274.3,320,240,320,206,320C171.4,320,137,320,103,320C68.6,320,34,320,17,320L0,320Z"></path></svg> 
+<!-- ######################### ABOUT ######################### -->
+    <section class="section" id="about">
+            <div class="container cont">
+                <div class="grupo_a">
+                    <div class="sub">
+                        <div data-anime="left">
+                            <h2 class="title">Sobre mim</h2>
+                        </div>  
+                        <div data-anime="left">
+                            <p>
+                                Um desenvolvedor Front-End Designer e formado em Analista de Desenvolvimento de Sistema que procura ser melhor do que no dia anterior, ter crescimento contínuo e
+                                causar impacto na vida das pessoas.
+                                Estou estudando <span class="color_yellow"> Bacharelado em Sistemas de Informação pela Universidade Federal de Alagoas - UFAL</span>.
+                                <br>
+                                Em busca de ser um ótimo profissional como <span class="color_purple">Analista de Sistemas e S.I.</span>
+                                <br>
+                                Quero aplicar, meus conhecimentos em soluções críticas, para desenvolver minha carreira
+                                profissionalmente com a intenção de unir os conhecimentos e experiências obtidos para um desempenho melhor no desenvolvimento web e estimulo de uma empresa comprometida com a inovação.
+                            </p>
+                            <p class="interests">
+                                 <span class="sub-title">Interesses</span> 
+                                <br>    
+                                — 
+                                <i class="fab fa-react icon_link color_blue" aria-hidden="true"></i>                  
+                                —   
+                                <i class="fab fa-js-square icon_link color_yellow" aria-hidden="true"></i>
+                                — 
+                                <i class="fab fa-node-js icon_link color_green" aria-hidden="true"></i> 
+                                —
+                            </p>  
+                        </div>
+                        
+                    </div>
+                    <div class="sub">
+                        <div data-anime="right">
+                            <h2 id="Objetivos">Objetivos</h2>
+                        </div>  
+                    <div data-anime="right">
+                            <p>
+                                Contributo imediato para a continuação do sucesso da sua empresa.
+                                Já possuo uma grande base com desenvolvimento web estou focado em Cascading Style Sheets <span class="color_blue">Css.</span>
+                                Mas aberto para trabalhar e estudar novas linguagens e tecnologias.
+                            </p>
+                            <div class="contImg">
+                                <img src="/svg/undraw_developer_activity_re_39tg.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+                <div class="grupo_b" data-anime="right">      
+                    <div id="Saly-13"></div>                                       
+                </div>
+            </div>
+        </section>
 
-    </footer>
 
 
+
+
+
+
+</footer>  
+    <div class="divider-footer"></div>
+    <!-- FontWesome -->
+    <script src="https://kit.fontawesome.com/673aed7dea.js" crossorigin="anonymous"></script>
+    <!-- Jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Main.js -->
+    <script src="/js/main.js"></script>
+    <!-- Ícone -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+    
 </body>
-
 </html>
 <!--
 ──▄▀▀▀▄───────────────
