--- a/portifolio-2/index.html
+++ b/portifolio-2/index.html
@@ -106,8 +106,8 @@
                     <div data-anime="right">
                             <p>
                                 Contributo imediato para a continuação do sucesso da sua empresa.
-                                Já possuo uma grande base com desenvolvimento web estou focado em Cascading Style Sheets <span class="color_blue">Css.</span>
-                                Mas aberto para trabalhar e estudar novas linguagens e tecnologias.
+                                Já possuo uma grande base com desenvolvimento web estou focado em <span class="color_blue">Html5, Css3 e JavaScript.</span>
+                                Entretanto estou aberto para trabalhar e estudar novas linguagens e tecnologias.
                             </p>
                             <div class="contImg">
                                 <img src="/svg/undraw_developer_activity_re_39tg.svg" alt="">
@@ -120,10 +120,74 @@
                 </div>
             </div>
         </section>
-
-
-
-
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="position: relative; top: -1rem;">
+            <path fill="#1F2326" fill-opacity="1" d="M0,96L17.1,96C34.3,96,69,96,103,101.3C137.1,107,171,117,206,128C240,139,274,149,309,176C342.9,203,377,245,411,234.7C445.7,224,480,160,514,160C548.6,160,583,224,617,224C651.4,224,686,160,720,160C754.3,160,789,224,823,256C857.1,288,891,288,926,282.7C960,277,994,267,1029,250.7C1062.9,235,1097,213,1131,218.7C1165.7,224,1200,256,1234,240C1268.6,224,1303,160,1337,122.7C1371.4,85,1406,75,1423,69.3L1440,64L1440,0L1422.9,0C1405.7,0,1371,0,1337,0C1302.9,0,1269,0,1234,0C1200,0,1166,0,1131,0C1097.1,0,1063,0,1029,0C994.3,0,960,0,926,0C891.4,0,857,0,823,0C788.6,0,754,0,720,0C685.7,0,651,0,617,0C582.9,0,549,0,514,0C480,0,446,0,411,0C377.1,0,343,0,309,0C274.3,0,240,0,206,0C171.4,0,137,0,103,0C68.6,0,34,0,17,0L0,0Z"></path>
+        </svg>
+<!-- ######################### SKILLS ######################### -->
+<section class="section" id="skills">                                   
+            <h2 data-anime="bottom">Habilidades</h2>
+            <div class="container">
+                <div id="linguages">
+                    <div class="ling">
+                        <a href="#HTML" class="DivLink card-html" data-anime="bottom_lento">
+                            <i class="fab fa-html5 icon_link" aria-hidden="true"></i>                          
+                            <span class="">—HTML—</span>
+                        </a>
+                        <a href="#CSS" class="DivLink card-css" data-anime="bottom_rapido">
+                            <i class="fab fa-css3-alt icon_link" aria-hidden="true"></i> 
+                            <span class="">—CSS—</span>
+                        </a>
+                        <a href="#JavaScript" class="DivLink card-js" data-anime="bottom_lento">
+                            <i class="fab fa-js-square icon_link" aria-hidden="true"></i>
+                            <span class="">—JavaScript—</span>
+                        </a>
+                        <a href="#Git" class="DivLink card-git" data-anime="bottom_lento">
+                            <i class="fab fa-git-alt icon_link" aria-hidden="true"></i>
+                            <span class="">—Git—</span>     
+                        </a>
+                        <a href="#GitHub" class="DivLink card-github" data-anime="bottom_rapido">
+                            <i class="fab fa-github icon_link" aria-hidden="true"></i> 
+                            <span class="">—GitHub—</span>              
+                        </a>                        
+                    </div>  
+<!--                     <div class="ling">
+                        <a href="#Python" class="DivLink card-py" data-anime="bottom_rapido">
+                            <i class="fab fa-python icon_link" aria-hidden="true"></i>  
+                            <span class="">—Python—</span>             
+                        </a>
+                        <a href="#Node-js" class="DivLink card-node" data-anime="left">
+                            <i class="fab fa-node-js icon_link" aria-hidden="true"></i> 
+                            <span class="">—Node.js—</span>                
+                        </a>
+                        <a href="#PHP" class="DivLink card-php" data-anime="right">
+                            <i class="fab fa-php icon_link" aria-hidden="true"></i>
+                            <span class="">—PHP—</span>         
+                        </a>
+                        <a href="#mysql" class="DivLink card-mysql" data-anime="bottom_rapido">
+                            <i class="fas fa-database icon_link" aria-hidden="true"></i> 
+                            <span class="">—Mysql—</span>         
+                        </a>
+                        <a href="#Java" class="DivLink card-java" data-anime="bottom_lento">
+                            <i class="fab fa-java icon_link" aria-hidden="true"></i>
+                            <span class="">—Java—</span>                 
+                        </a>
+                    </div>
+-->  
+                </div>
+                <h2 class="color_dark" data-anime="right"><span class="color_red"> Estatísticas tiradas do </span>GitHub <i class="fab fa-github" aria-hidden="true"></i></h2>
+                <div id="gitCard_img" class="cont" data-anime="bottom">
+                    <img class="card_es" src="https://github-readme-stats.vercel.app/api/top-langs/?username=felixskmarcio&amp;layout=compact&amp;langs_count=7&amp;theme=midnight-purple">
+                    <img class="card_es" src="https://github-readme-stats.vercel.app/api?username=felixskmarcio&amp;show_icons=true&amp;theme=midnight-purple&amp;include_alcolor_commits=true&amp;count_private=true">
+                </div>
+                <br>
+                <h2 data-anime="right">Commits do meu <a href="https://github.com/felixskmarcio" target="_blank" class="color_blue">repositório</a></h2>
+                <div id="Div_snake">
+                    <img src="https://raw.githubusercontent.com/felixskmarcio/felixskmarcio/output/github-contribution-grid-snake-dark.svg" data-anime="bottom">
+                    <img src="https://activity-graph.herokuapp.com/graph?username=felixskmarcio&amp;custom_title=felixskmarcio%27s%20Contribution%20Graph&amp;bg_color=121214&amp;color=737380&amp;line=28203e&amp;point=8257e5&amp;hide_border=true" alt="">
+                </div>
+            </div>
+        </section>
+        </main>
 
 
 
