--- a/portifolio-2/index.html
+++ b/portifolio-2/index.html
@@ -148,7 +148,12 @@
                         <a href="#GitHub" class="DivLink card-github" data-anime="bottom_rapido">
                             <i class="fab fa-github icon_link" aria-hidden="true"></i> 
                             <span class="">—GitHub—</span>              
-                        </a>                        
+                        </a>     
+                        <a href="#GitHub" class="DivLink card-c" data-anime="bottom_rapido">
+                            <i class="fa-solid fa-copyright icon_link" aria-hidden="true"></i> 
+                            <span class="">—C—</span>              
+                        </a>
+                                           
                     </div>  
 <!--                     <div class="ling">
                         <a href="#Python" class="DivLink card-py" data-anime="bottom_rapido">
@@ -193,7 +198,7 @@
 
 </footer>  
     <div class="divider-footer"></div>
-    <!-- FontWesome -->
+    <!-- FontWesome/Ícone -->
     <script src="https://kit.fontawesome.com/673aed7dea.js" crossorigin="anonymous"></script>
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
