--- a/portifolio-2/projetos/projetos.html
+++ b/portifolio-2/projetos/projetos.html
@@ -78,8 +78,20 @@
                           <a href="https://github.com/felixskmarcio/projetos/tree/main/sidebar-menu-2" target="_blank">Ver repositório</a> | <a href="/projetos/sidebar-menu-2/index.html" target="_blank">Ver Projeto</a> 
                         </div>
                     </div>           
-                </div>
-                
+                </div>                
+            </li>
+                        <li onclick="MenuModal()">
+                <div class="contProject">
+                    <img src="/img/img_project/portfolio1.png" alt="Projeto web Calculadora">  
+                    <h2 class="titleProject">Portfólio 1</h2>   
+                    <div class="cardDesc">
+                        <h3>Menu de navegação de conta de usuário</h3>
+                        <p>Foi criado um menu de navegação de conta de usuário. tecnologias utilizadas HTML, CSS e JS</p></p>
+                        <div class="linkProject">
+                          <a href="https://github.com/felixskmarcio/FelixBr.github.io-master" target="_blank">Ver repositório</a> | <a href="../projetos/FelixBr.github.io-master/index.html" target="_blank">Ver Projeto</a> 
+                        </div>
+                    </div>           
+                </div>                
             </li>
         </ol>
     </main>
