--- a/portifolio-2/curriculos/curriculo1.html
+++ b/portifolio-2/curriculos/curriculo1.html
@@ -22,7 +22,7 @@
             </div>
             <div id="perfil">
                 <div id="contDiv">
-                    <a href="/"><img src="/img/logo.png" alt="foto de perfil do joão"></a>
+                    <a href="/"><img src="/img/logo.png" alt="foto de perfil do Marcio"></a>
                 </div>
                 <span>FelixBR<i class="fa-solid fa-sort-down"></i>
                     <ul class="menu-hover" id="menu-perfil">
@@ -53,7 +53,7 @@
         <div class="container">
             <header class="container grid cont header-profile">
                 <div class="div-img-profile">
-                    <img src="/img/logo.png" alt="Foto do João">
+                    <img src="/img/logo.png" alt="Foto do Marcio">
                 </div>
                 <p>   
                     <span class="name-profile">Marcio Felix <i class="fa-solid fa-mug-hot"></i></span>
@@ -93,7 +93,7 @@
                 <i class="fab fa-git-alt" aria-hidden="true"></i> 
                 — <br>            
             </p>
-            <a href="/pdf/CV-Joao-Victor.pdf" target="_blank" class="btn-link">Meu Currículo 2 <i class="fas fa-file-alt" aria-hidden="true"></i></a>             
+<a href="/curriculos/curriculo2.html" target="_blank" class="btn-link">Meu Currículo 2 <i class="fas fa-file-alt" aria-hidden="true"></i></a>              
         </div>
     </footer> 
     <div class="divider-footer"></div>
