--- a/portifolio-2/curriculos/curriculo2.html
+++ b/portifolio-2/curriculos/curriculo2.html
@@ -22,7 +22,7 @@
             </div>
             <div id="perfil">
                 <div id="contDiv">
-                    <a href="/"><img src="/img/logo.png" alt="foto de perfil do joão"></a>
+                    <a href="/"><img src="/img/logo.png" alt="Marcio Felix"></a>
                 </div>
                 <span>FelixBR<i class="fa-solid fa-sort-down"></i>
                     <ul class="menu-hover" id="menu-perfil">
@@ -42,10 +42,10 @@
  padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE5H5WraqU&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE-zJOQHZI&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE5H5WraqU&#x2F;view?utm_content=DAE5H5WraqU&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAE-zJOQHZI&#x2F;view?utm_content=DAE-zJOQHZI&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
        
     <div class="divider-footer"></div>
     <!-- ######################### FOOTER ######################### -->     
@@ -93,7 +93,7 @@
                 <i class="fab fa-git-alt" aria-hidden="true"></i> 
                 — <br>            
             </p>
-            <a href="/pdf/CV-Joao-Victor.pdf" target="_blank" class="btn-link">Meu Currículo 2 <i class="fas fa-file-alt" aria-hidden="true"></i></a>             
+<a href="/curriculos/curriculo1.html" target="_blank" class="btn-link">Meu Currículo 1 <i class="fas fa-file-alt" aria-hidden="true"></i></a>           
         </div>
     </footer> 
     <div class="divider-footer"></div>
