--- a/portifolio-2/index.html
+++ b/portifolio-2/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/css/anima.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>   
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
-    <title>Portfolio | Marcio Eduardo Felix </title>    
+    <title>Portfólio | Marcio Eduardo Felix </title>    
 </head>
 <body>
     <svg id="svg-topo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -49,7 +49,7 @@
 <!-- ######################### HOME ######################### -->         
         <section id="home">
             <div class="contImg">
-                <img id="pulse-img" src="/img/logo.png" alt="Imagem do João">
+                <img id="pulse-img" src="/img/logo.png" alt="Imagem do Marcio">
             </div>
             <div class="textHome">
                 <p><span class="color_purple">print</span>("<span class="color_green">Hello World, Meu nome é Marcio Felix <i class="fa-solid fa-mug-hot"></i></a></span>")</p>
@@ -202,7 +202,7 @@
         <div class="container">
             <header class="container grid cont header-profile">
                 <div class="div-img-profile">
-                    <img src="/img/logo.png" alt="Foto do João">
+                    <img src="/img/logo.png" alt="Foto do Marcio">
                 </div>
                 <p>   
                     <span class="name-profile">Marcio Felix <i class="fa-solid fa-mug-hot"></i></span>
@@ -242,8 +242,8 @@
                 <i class="fab fa-git-alt" aria-hidden="true"></i> 
                 — <br>            
             </p>
-            <a href="../curriculos/curriculo1.html" target="_blank" class="btn-link">Meu Currículo 1 <i class="fas fa-file-alt" aria-hidden="true"></i></a> 
-            <a href="/pdf/CV-Joao-Victor.pdf" target="_blank" class="btn-link">Meu Currículo 2 <i class="fas fa-file-alt" aria-hidden="true"></i></a>             
+            <a href="/curriculos/curriculo1.html" target="_blank" class="btn-link">Meu Currículo 1 <i class="fas fa-file-alt" aria-hidden="true"></i></a> 
+<a href="/curriculos/curriculo2.html" target="_blank" class="btn-link">Meu Currículo 2 <i class="fas fa-file-alt" aria-hidden="true"></i></a>            
         </div>
     </footer> 
     <div class="divider-footer"></div>
