--- a/portifolio-2/projetos/projetos.html
+++ b/portifolio-2/projetos/projetos.html
@@ -88,7 +88,7 @@
                         <h3>Menu de navegação de conta de usuário</h3>
                         <p>Foi criado um menu de navegação de conta de usuário. tecnologias utilizadas HTML, CSS e JS</p></p>
                         <div class="linkProject">
-                          <a href="https://github.com/felixskmarcio/FelixBr.github.io-master" target="_blank">Ver repositório</a> | <a href="../projetos/FelixBr.github.io-master/index.html" target="_blank">Ver Projeto</a> 
+                          <a href="https://github.com/felixskmarcio/FelixBr.github.io-master" target="_blank">Ver repositório</a> | <a href="projetos/FelixBr.github.io-master/index.html" target="_blank">Ver Projeto</a> 
                         </div>
                     </div>           
                 </div>                
